# esp32_irrigation_embedded

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/button-handler/: ButtonHandler.cpp  CMakeLists.txt
components/button-handler/include/: ButtonHandler.h
components/fields/: CMakeLists.txt  DateField.cpp  DayField.cpp  DurationField.cpp  Field.cpp  ShortField.cpp  StringField.cpp  TimeField.cpp  WeekField.cpp
components/fields/include/: DateField.h  DayField.h  DurationField.h  Field.h  ShortField.h  StringField.h  TimeField.h  WeekField.h
components/jobs/: CMakeLists.txt  Job.cpp
components/jobs/include/: Job.h
components/navigation-manager/: CMakeLists.txt  NavigationManager.cpp
components/navigation-manager/include/: NavigationManager.h
components/options/: CMakeLists.txt  FieldOption.cpp  FunctionalFieldOption.cpp  FunctionalOption.cpp  NamedOption.cpp  Option.cpp  ScheduleOption.cpp
components/options/include/: Option.h  (+5 more)
components/pages/: CMakeLists.txt  DateTimePage.cpp  EditJobPage.cpp  EditJobsPage.cpp  EditProgramPage.cpp  EditProgramsPage.cpp  EditRunPage.cpp  EditRunsPage.cpp  FilterSchedulesPage.cpp  MainPage.cpp  OptionsPage.cpp  Page.cpp  SettingsPage.cpp
components/pages/include/: DateTimePage.h  EditJobPage.h  EditJobsPage.h  EditProgramPage.h  EditProgramsPage.h  EditRunPage.h  EditRunsPage.h  FilterSchedulesPage.h  MainPage.h  OptionsPage.h  Page.h  SettingsPage.h
components/settings/: CMakeLists.txt  Settings.cpp
components/shift-register/: CMakeLists.txt  ShitRegister.cpp
main/: Kconfig.projbuild  main.cpp
(+2 files in other folders)
